--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
-gevent>=1.0.2,<2.0.0
-gevent-websocket>=0.9.5,<1.0.0
-leancloud>=2.0.0,<3.0.0
-Werkzeug>=0.11.11,<1.0.0
-Flask>=0.10.1,<1.0.0
-Flask-Sockets>=0.1,<1.0
-wechatpy
-requests
-pycrypto
+flask>=0.12.2
+wechatpy>=1.5.1
+requests>=2.18.4
+pycrypto>=2.6.1
